heade catchphrase alignment fixed

--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ header {
     justify-content: space-between;
     background-color: rgba(255, 255, 255, 1);
     position: fixed;
-    width: 100vw;
+    width: -webkit-fill-available;
     box-shadow: 0px 2px 7px 0px rgba(0, 0, 0, 0.3);
     z-index: 1;
 
